# rp2354-fido2-key

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RP2040-fido.kicad_prl  RP2354-fido.kicad_pcb  RP2354-fido.kicad_pro  RP2354-fido.kicad_sch  RP2354-fido.kicad_sch.bak  analysis.json  fix_schematic.py  ~RP2040-fido.kicad_pro.lck
schematic/: rp2354-fido.kicad_pcb  rp2354-fido.kicad_pro  rp2354-fido.kicad_sch
schematic/analysis/: manifest.json
schematic/jlcpcb/: project.db
schematic/jlcpcb/gerber/: rp2354-fido-CuBottom.gbr  rp2354-fido-CuTop.gbr  rp2354-fido-EdgeCuts.gbr  rp2354-fido-MaskBottom.gbr  rp2354-fido-MaskTop.gbr  rp2354-fido-NPTH.drl  rp2354-fido-PTH.drl  rp2354-fido-PasteBottom.gbr  rp2354-fido-PasteTop.gbr  rp2354-fido-SilkBottom.gbr  rp2354-fido-SilkTop.gbr
